--- a/index.html
+++ b/index.html
@@ -1,18 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap Integration</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    
-    <script type="module" src="src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bootstrap Integration</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+</head>
+
+<body class="overflow-x-hidden">
+  <header
+    class="position-absolute vw-100 top-0 py-5 px-2 d-flex justify-content-end align-content-center align-items-center d-none d-md-block">
+    <nav>
+      <ul class="d-flex justify-content-end w-100 align-content-center align-items-center m-0 px-5 gap-5">
+        <li class="list-unstyled text-white">Acheter des livres</li>
+        <li class="list-unstyled" style="color: #ADB5BD;">Consulter des livres</li>
+      </ul>
+    </nav>
+  </header>
+  <section class="hero-banner vw-100 bg-primary wrapper" style="height: 88vh;">
+    <div
+      class="col-12 col-md-8 d-flex justify-content-center align-items-center align-content-center flex-wrap  p-5 ps-md-4">
+      <div class="col-12 col-md-6">
+        <h1 class="text-white fw-bolder display-6">Acheter des livres,<br> c’est facile</h1>
+        <p class="col-11 text-white pb-2">Lorem ipsum dolor sit amet consectetur. Laoreet nunc auctor metus et eu dui
+          mattis. Donec nunc tortor convallis massa cras ac. Amet vulputate faucibus amet nibh nunc non. Est felis
+          aenean risus purus.</p>
+        <button class="btn btn-secondary text-primary fw-bold border-0">Voir nos livres</button>
+      </div>
+      <div class="col-12 col-md-6 d-none d-md-flex justify-content-center align-content-center">
+        <img class="object-fit-contain" src="src/img/image 1.png" alt="pille de livres">
+      </div>
+    </div>
+  </section>
+
+  <section class="wrapper align-items-start align-content-start">
+    <div
+      class="wrapper w-75 px-2 p-md-0 align-items-center justify-content-start py-2 pt-4 py-md-5 pt-md-5 pb-md-2 flex-column gap-2 gap-md-3">
+      <h3 class="text-tertiary w-100 text-center">Consulter les classiques</h3>
+
+      <div class="input-group md-form form-sm form-1 pl-0 col-8 col-md-6 my-3">
+        <div class="input-group-prepend d-flex">
+          <span class="input-group-text purple lighten-3" id="basic-text1" style="border-radius: 5px 0 0 5px;">
+            <i class="fas fa-search text-" aria-hidden="true"></i>
+          </span>
+        </div>
+        <input class="form-control my-0 py-1" type="text" placeholder="Rechercher un livre" aria-label="Search">
+      </div>
+
+      <div class="alert alert-warning d-flex align-items-center gap-2 d-none d-md-flex" role="alert">
+        <i class="bi bi-exclamation-triangle-fill"></i>
+        <div>
+          Attention les frais de port ne sont pas inclus
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg"
+          viewBox="0 0 16 16">
+          <path
+            d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z">
+          </path>
+        </svg>
+      </div>
+    </div>
+
+    <ul class="wrapper p-0 w-75 justify-content-evenly item-book-container">
+      <li class="item-book d-flex flex-column col-12 col-md-3 p-5">
+        <div class="position-relative">
+          <span class="badge text-bg-info position-absolute text-primary"
+            style="position: absolute; top: 6%; right: 6%;">Best seller</span>
+          <img class="w-100" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+        </div>
+        <h6 class="mt-3 fw-700 m-0">Baudelaire</h6>
+        <p class="fw-bold opacity-50">Les Fleurs du mal</p>
+      </li>
+      <li class="item-book d-flex flex-column col-12 col-md-3 p-5">
+        <div class="position-relative">
+          <span class="badge text-bg-info position-absolute text-primary d-none d-md-block"
+            style="position: absolute; top: 6%; right: 6%;">Best seller</span>
+          <img class="w-100" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+        </div>
+        <h6 class="mt-3 fw-700 m-0">Baudelaire</h6>
+        <p class="fw-bold opacity-50">Les Fleurs du mal</p>
+      </li>
+      <li class="item-book d-flex flex-column col-12 col-md-3 p-5">
+        <div class="position-relative">
+          <span class="badge text-bg-danger position-absolute text-white"
+            style="position: absolute; top: 6%; right: 6%;">Rupture de stock</span>
+          <img class="w-100" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+        </div>
+        <h6 class="mt-3 fw-700 m-0">Baudelaire</h6>
+        <p class="fw-bold opacity-50">Les Fleurs du mal</p>
+        </div>
+      <li class="item-book d-flex flex-column col-12 col-md-3 p-5">
+        <div>
+          <img class="w-100" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+        </div>
+        <h6 class="mt-3 fw-700 m-0">Baudelaire</h6>
+        <p class="fw-bold opacity-50">Les Fleurs du mal</p>
+      </li>
+      <li class="item-book d-flex flex-column col-12 col-md-3 p-5">
+        <div>
+          <img class="w-100" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+        </div>
+        <h6 class="mt-3 fw-700 m-0">Baudelaire</h6>
+        <p class="fw-bold opacity-50">Les Fleurs du mal</p>
+      </li>
+      <li class="item-book d-flex flex-column col-12 col-md-3 p-5">
+        <div>
+          <img class="w-100" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+        </div>
+        <h6 class="mt-3 fw-700 m-0">Baudelaire</h6>
+        <p class="fw-bold opacity-50">Les Fleurs du mal</p>
+      </li>
+      <li class="item-book d-flex flex-column col-12 col-md-3 p-5">
+        <div>
+          <img class="w-100" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+        </div>
+        <h6 class="mt-3 fw-700 m-0">Baudelaire</h6>
+        <p class="fw-bold opacity-50">Les Fleurs du mal</p>
+      </li>
+      <li class="item-book d-flex flex-column col-12 col-md-3 p-5">
+        <div>
+          <img class="w-100" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+        </div>
+        <h6 class="mt-3 fw-700 m-0">Baudelaire</h6>
+        <p class="fw-bold opacity-50">Les Fleurs du mal</p>
+      </li>
+    </ul>
+    <div class="wrapper w-100 button-nav-pages-container gap-4">
+      <button class="btn btn-primary">1</button>
+      <button class="btn btn-secondary">2</button>
+      <button class="btn btn-secondary">3</button>
+      <button class="btn btn-secondary">4</button>
+    </div>
+  </section>
+
+  <section class="wrapper vw-100 mt-5 bg-primary py-4" style="min-height: 70vh;">
+
+    <div class="col-12 col-md-9 wrapper">
+      <div class="col-12 col-md-6 wrapper">
+        <img class="w-75 p-4 p-md-5 img-best-seller" src="src/img/fleurs-du-mal.jpg" alt="" srcset="">
+      </div>
+      <div class="col-1"></div>
+      <div
+        class="col-12 col-md-5 d-flex justify-content-center align-content-center align-items-center flex-wrap justify-content-md-start my-5 m-md-0">
+        <h2 class="text-white fw-bolder best-seller">Notre best seller</h2>
+        <p class="col-11 text-white pb-2 px-4 px-md-0 text-center text-md-start">Lorem ipsum dolor sit amet consectetur. Laoreet nunc
+          auctor metus et eu dui
+          mattis. Donec nunc tortor convallis massa cras ac. Amet vulputate faucibus amet nibh nunc non. Est felis
+          aenean risus purus.</p>
+        <button class="btn btn-secondary text-primary fw-bold border-0">Acheter</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="vw-100 wrapper py-5">
+    <h3 class="w-100 text-center mb-4 text-tertiary fw-bold top-ventes">Top des ventes</h3>
+    <div class="col-11 col-md-7 wrapper">
+      <table class="table table-borderless">
+        <thead>
+          <tr>
+            <th scope="col" class="align-middle">#</th>
+            <th scope="col" class="col-4 align-middle">Nom</th>
+            <th scope="col" class="align-middle d-none d-md-block">Date de sortie</th>
+            <th scope="col" class="align-middle">Disponibilité</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td class="ellipsis">Les Fleurs du mal</td>
+            <td class="d-none d-md-block">21/12/2021</td>
+            <td><span class="badge rounded-pill text-bg-success">Disponible</span></td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td class="ellipsis text-truncate">Voyage au bout de la nuit</td>
+            <td class="d-none d-md-block">12/08/2020</td>
+            <td><span class="badge rounded-pill text-bg-danger">Rupture</span></td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td class="ellipsis">Don Quichotte</td>
+            <td class="d-none d-md-block">05/02/2016</td>
+            <td><span class="badge rounded-pill text-bg-success">Disponible</span></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+
+  <footer class="vw-100 bg-primary py-5 wrapper px-5 p-md-0">
+    <div
+      class="col-12 col-md-6 flex-column flex-md-row align-items-center align-items-md-start align-content-md-start justify-content-md-start flex-wrap d-flex gap-4 gap-md-0 px-5 p-md-0 py-3 py-md-0">
+      <div class="col-8 col-md-4 wrapper flex-column align-items-start align-content-start">
+        <h5 class="text-white">Navigation</h5>
+        <a href="#" class="text-white text-decoration-none">News</a>
+        <a href="#" class="text-white text-decoration-none">Acheter des livres</a>
+        <a href="#" class="text-white text-decoration-none">Consulter des livres</a>
+        <a href="#" class="text-white text-decoration-none">Best Sellers</a>
+      </div>
+      <div class="col-8 col-md-4 wrapper flex-column align-items-start align-content-start">
+        <h5 class="text-white">Aide</h5>
+        <a href="#" class="text-white text-decoration-none">Prix</a>
+        <a href="#" class="text-white text-decoration-none">Comparer</a>
+        <a href="#" class="text-white text-decoration-none">Catalogue</a>
+        <a href="#" class="text-white text-decoration-none">SAV</a>
+      </div>
+      <div class="col-8 col-md-4 wrapper flex-column align-items-start align-content-start">
+        <h5 class="text-white">Informations</h5>
+        <a href="#" class="text-white text-decoration-none">Conditions d’utilisation</a>
+        <a href="#" class="text-white text-decoration-none">Mentions légales</a>
+      </div>
+    </div>
+  </footer>
+
+  <script type="module" src="src/main.js"></script>
+</body>
+
 </html>
