--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </div>
   </section>
 
-  <footer class="vw-100 bg-primary py-5 wrapper px-5 p-md-0">
+  <footer class="vw-100 bg-primary py-5 wrapper px-5">
     <div
       class="col-12 col-md-6 flex-column flex-md-row align-items-center align-items-md-start align-content-md-start justify-content-md-start flex-wrap d-flex gap-4 gap-md-0 px-5 p-md-0 py-3 py-md-0">
       <div class="col-8 col-md-4 wrapper flex-column align-items-start align-content-start">
